add some stuff to home page

--- a/MariosSpecialtyStore/Views/Home/Index.cshtml
+++ b/MariosSpecialtyStore/Views/Home/Index.cshtml
@@ -2,4 +2,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1>Mario</h1>
+<div class="home-image">
+    <h1>Mario's Specialty Foods</h1>
+</div>
+
+<div class="most-rated">
+
+</div>
+
+<div class="container">
+    <div class="row about-section">
+        <div class="col-md-6 about-story">
+            <h3 class="about-header">ABOUT US</h3>
+            <p>Capicola bresaola shank cow chuck pork loin ham hock meatball meatloaf kevin turkey hamburger short loin leberkas shankle. Brisket chicken frankfurter, meatloaf picanha corned beef flank pork loin beef. Ribeye beef ribs flank turducken short ribs. Turducken beef tail, venison burgdoggen rump pork belly shankle andouille swine doner ball tip shank.</p>
+            <p>In proident enim, salami laboris alcatra consectetur picanha nisi boudin bacon capicola pork loin. Shank chicken aute tail eiusmod. Frankfurter ut veniam meatloaf cow est laborum biltong proident andouille tri-tip landjaeger. Ut turducken ex short loin. Reprehenderit exercitation occaecat beef ribs ullamco prosciutto pig pork belly fugiat chuck boudin. Meatloaf prosciutto pork loin exercitation in adipisicing ham jerky irure in tongue nulla id ut tail. Cillum mollit brisket biltong sirloin swine laboris excepteur.</p>
+        </div>
+
+        <div class="col-md-6 mario-story">
+            <h3 class="about-header">MARIO'S STORY</h3>
+            <p>Andouille turducken rump, bacon ribeye cow pork ham meatloaf meatball swine kevin. Cupim spare ribs pancetta sirloin swine, bresaola tri-tip venison kielbasa strip steak ball tip filet mignon pork turkey t-bone. Doner t-bone biltong ham. Cupim ham hock kevin ground round swine. Jowl andouille sirloin doner leberkas shoulder, pork chop shank. Boudin short ribs kevin corned beef alcatra biltong tenderloin drumstick porchetta leberkas ball tip shank ribeye turkey. Jerky kevin rump, ground round boudin corned beef spare ribs kielbasa turducken leberkas short loin flank. Spare ribs porchetta pork belly, pork loin ribeye chicken ground round beef tongue.</p>
+            <p>Laboris voluptate in esse pig fugiat biltong pariatur. Eiusmod alcatra cillum consequat in jowl. Ribeye dolor ad, chicken dolore ea biltong prosciutto andouille et culpa laboris. Pastrami id nulla alcatra brisket lorem jerky hamburger tongue prosciutto cillum irure ad porchetta. Shoulder laborum pork sed beef exercitation magna prosciutto duis boudin meatloaf ball tip. Ball tip tempor doner id venison in non jowl ullamco flank capicola consectetur laboris filet mignon. Dolore cillum shoulder, meatloaf capicola chicken nostrud adipisicing deserunt kielbasa dolor.</p>
+        </div>
+    </div>
+
+</div>
