--- a/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
+++ b/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,15 +7,16 @@
 
      <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="~/css/site.css" />
 </head>
 	
 <body>
     <header>
         <div class="container">
-            <div class="row">
+            <div class="row top-nav">
                 <div class="col-md-4">
-                    <h3 class="logo">Mario's Specialty Foods</h3>
+                    <h4 class="logo">MARIO'S SPECIALTY FOODS</h4>
 				</div>
 				<div class="col-md-8">
                     <ul>
@@ -28,7 +29,7 @@
 	</header>
 
 		
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()
         <hr />
         <footer>
