--- a/MariosSpecialtyStore/Views/Home/Index.cshtml
+++ b/MariosSpecialtyStore/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<MariosSpecialtyStore.Models.Product>
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -7,7 +8,51 @@
 </div>
 
 <div class="most-rated">
+    <h3 class="home-product-header">Most Rated Products</h3>
+    <div class="container">
+        <div class="row">
+            @foreach (var product in Model)
+            {
+                <div class="col-md-4">
+                    <div class="card home-card">
+                        <img class="card-img-top" src="~/images/ImagePlaceholder.png" alt="Card image cap">
+                        <h4 class="card-title">@Html.DisplayFor(m => product.Name)</h4>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">@Html.DisplayFor(m => product.Country)</p>
+                        <p class="card-text">@Html.DisplayFor(m => product.Cost)</p>
+                        <a asp-controller="Products" asp-action="Details" asp-route-id="@product.ProductId" class="anchor"><p class="card-text">See Details</p></a>
+                        <div class="card-footer">
+                            <small class="text-muted">Average Rating: @product.AverageRating()</small>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</div>
 
+<div class="most-rated">
+    <h3 class="home-product-header">Our Newest Items</h3>
+    <div class="container">
+        <div class="row">
+            @foreach (var product in ViewBag.newest)
+            {
+                <div class="col-md-4">
+                    <div class="card home-card">
+                        <img class="card-img-top" src="~/images/ImagePlaceholder.png" alt="Card image cap">
+                        <h4 class="card-title">@product.Name</h4>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">@product.Country</p>
+                        <p class="card-text">@product.Cost</p>
+                        <a asp-controller="Products" asp-action="Details" asp-route-id="@product.ProductId" class="anchor"><p class="card-text">See Details</p></a>
+                        <div class="card-footer">
+                            <small class="text-muted">Average Rating: @product.AverageRating()</small>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
 </div>
 
 <div class="container">
