--- a/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
+++ b/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
@@ -16,12 +16,11 @@
         <div class="container">
             <div class="row top-nav">
                 <div class="col-md-4">
-                    <h4 class="logo">MARIO'S SPECIALTY FOODS</h4>
+                    <h4 class="logo"><a asp-controller="Home" asp-action="Index">MARIO'S SPECIALTY FOODS</a></h4>
 				</div>
 				<div class="col-md-8">
                     <ul>
-                        <li>Products</li>
-                        <li>Reviews</li>
+                        <li><a asp-controller="Products" asp-action="Index">Products</a></li>
 					</ul>
 				</div>
 			</div>
