--- a/MariosSpecialtyStore/Views/Products/Details.cshtml
+++ b/MariosSpecialtyStore/Views/Products/Details.cshtml
@@ -13,8 +13,12 @@
                 <p>Product of @Html.DisplayFor(model => model.Country)</p>
                 <p>Cost: @Html.DisplayFor(model => model.Cost)</p>
                 <p>This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p><a asp-controller="Products" asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> | <a asp-controller="Products" asp-action="Delete" asp-route-id="@Model.ProductId">Delete</a></p>
 
+                @if (User.Identity.IsAuthenticated)
+				{
+				    <p><a asp-controller="Products" asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> | <a asp-controller="Products" asp-action="Delete" asp-route-id="@Model.ProductId">Delete</a></p>
+                }
+				
 				@if(Model.ProductImg!= null)
 				{
                     String img64 = Convert.ToBase64String(Model.ProductImg);
@@ -35,8 +39,11 @@
                             <h4 class="card-title">@review.Rating</h4>
                             <h6 class="card-subtitle">Submitted By: @review.Author</h6>
                             <p class="card-text">@review.Content_Body</p>
-							<small><a asp-controller="Reviews" asp-action="Edit" asp-route-id="@review.ReviewId">Edit</a> | <a asp-controller="Reviews" asp-action="Delete" asp-route-id="@review.ReviewId">Delete</a></small>
-                        </div>
+                            @if (User.Identity.IsAuthenticated)
+							{
+                                <small><a asp-controller="Reviews" asp-action="Edit" asp-route-id="@review.ReviewId">Edit</a> | <a asp-controller="Reviews" asp-action="Delete" asp-route-id="@review.ReviewId">Delete</a></small>
+							}
+						</div>
                     </div>
                     }
                 </div>
