--- a/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
+++ b/MariosSpecialtyStore/Views/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     <title>@ViewData["Title"] - MariosSpecialtyStore</title>
 
      <meta name="viewport" content="width=device-width" />
+	<script
+      src="https://code.jquery.com/jquery-3.2.1.js"
+      integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+      crossorigin="anonymous"></script>	
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="~/css/site.css" />
@@ -51,5 +55,8 @@
     </div>
 
     @RenderSection("Scripts", required: false)
+
+		
+		<script src="~/js/site.js"></script>
 </body>
 </html>
