--- a/MariosSpecialtyStore/Views/Reviews/Create.cshtml
+++ b/MariosSpecialtyStore/Views/Reviews/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MariosSpecialtyStore.Models.Review
 
-@{ 
-    ViewData["Title"] = "Create";
+@{
+    Layout = "";
 }
 
 <div class="container">
@@ -10,7 +10,7 @@
 <h4>Review</h4>
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
+            <form action="CreateReview" class="new-review">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ProductId" value="@ViewBag.ProductId"/>
                 <div class="form-group">
@@ -33,9 +33,5 @@
                 </div>
             </form>
         </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
     </div>
 </div>
