--- a/MariosSpecialtyStore/Views/Reviews/Create.cshtml
+++ b/MariosSpecialtyStore/Views/Reviews/Create.cshtml
@@ -4,12 +4,10 @@
     Layout = "";
 }
 
-<div class="container">
-    <h2>Create</h2>
+<div class="container review-partial">
 
-<h4>Review</h4>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
             <form action="CreateReview" class="new-review">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ProductId" value="@ViewBag.ProductId"/>
@@ -19,7 +17,7 @@
                     <span asp-validation-for="Author" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Content_Body" class="control-label"></label>
+                    <label class="control-label">Your Review</label>
                     <textarea asp-for="Content_Body" class="form-control" ></textarea>
                     <span asp-validation-for="Content_Body" class="text-danger"></span>
                 </div>
@@ -29,7 +27,7 @@
                     <span asp-validation-for="Rating" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Submit" class="add-review-button" />
                 </div>
             </form>
         </div>
